added page, fixed some bugs

--- a/markup/prepros.cfg
+++ b/markup/prepros.cfg
@@ -57,8 +57,7 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript",
-          "babel": false
+          "type": "javascript"
         },
         "f6ac5c35": {
           "id": "f6ac5c35",
@@ -73,8 +72,7 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript",
-          "babel": false
+          "type": "javascript"
         },
         "94ce627f": {
           "id": "94ce627f",
@@ -89,8 +87,7 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript",
-          "babel": false
+          "type": "javascript"
         },
         "62195e19": {
           "id": "62195e19",
@@ -2483,6 +2480,27 @@
           "height": 460,
           "width": 640
         },
+        "81ea0c53": {
+          "id": "81ea0c53",
+          "path": "scss/layout/far-styles.scss",
+          "output": "css/layout/far-styles.css",
+          "name": "far-styles.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
+        },
         "2252e8de": {
           "id": "2252e8de",
           "path": "css/layout/far-styles.css",
@@ -2806,45 +2824,6 @@
           "parents": [],
           "type": "html"
         },
-        "6b0c27a8": {
-          "id": "6b0c27a8",
-          "path": "images/avatar.png",
-          "output": "images/avatar.png",
-          "name": "avatar.png",
-          "category": "IMAGE",
-          "size": 37334,
-          "type": "png",
-          "initialSize": 37334,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "f99f27ba": {
-          "id": "f99f27ba",
-          "path": "images/dislike.png",
-          "output": "images/dislike.png",
-          "name": "dislike.png",
-          "category": "IMAGE",
-          "size": 1315,
-          "type": "png",
-          "initialSize": 1315,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "923ac1bf": {
-          "id": "923ac1bf",
-          "path": "images/img-22.jpg",
-          "output": "images/img-22.jpg",
-          "name": "img-22.jpg",
-          "category": "IMAGE",
-          "size": 26518,
-          "type": "jpg",
-          "initialSize": 26518,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "9bb08e50": {
           "id": "9bb08e50",
           "path": "homey-black-list-employee-personal.html",
@@ -2867,17 +2846,6 @@
           "parents": [],
           "type": "html"
         },
-        "0635cf03": {
-          "id": "0635cf03",
-          "path": "homey-black-list-employer-personal(withoutautorization).html",
-          "output": "homey-black-list-employer-personal(withoutautorization).html",
-          "name": "homey-black-list-employer-personal(withoutautorization).html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "119d98ec": {
           "id": "119d98ec",
           "path": "homey-black-list-employer-personal(withautorization).html",
@@ -2889,6 +2857,56 @@
           "parents": [],
           "type": "html"
         },
+        "0635cf03": {
+          "id": "0635cf03",
+          "path": "homey-black-list-employer-personal(withoutautorization).html",
+          "output": "homey-black-list-employer-personal(withoutautorization).html",
+          "name": "homey-black-list-employer-personal(withoutautorization).html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "6b0c27a8": {
+          "id": "6b0c27a8",
+          "path": "images/avatar.png",
+          "output": "images/avatar.png",
+          "name": "avatar.png",
+          "category": "IMAGE",
+          "size": 37334,
+          "type": "png",
+          "initialSize": 37334,
+          "optimized": false,
+          "height": 140,
+          "width": 140
+        },
+        "923ac1bf": {
+          "id": "923ac1bf",
+          "path": "images/img-22.jpg",
+          "output": "images/img-22.jpg",
+          "name": "img-22.jpg",
+          "category": "IMAGE",
+          "size": 26518,
+          "type": "jpg",
+          "initialSize": 26518,
+          "optimized": false,
+          "height": 360,
+          "width": 320
+        },
+        "f99f27ba": {
+          "id": "f99f27ba",
+          "path": "images/dislike.png",
+          "output": "images/dislike.png",
+          "name": "dislike.png",
+          "category": "IMAGE",
+          "size": 1315,
+          "type": "png",
+          "initialSize": 1315,
+          "optimized": false,
+          "height": 30,
+          "width": 27
+        },
         "c9811854": {
           "id": "c9811854",
           "path": "images/sprite1.png",
@@ -2899,29 +2917,19 @@
           "type": "png",
           "initialSize": 2435,
           "optimized": false,
-          "height": 0,
-          "width": 0
+          "height": 400,
+          "width": 200
         },
-        "81ea0c53": {
-          "id": "81ea0c53",
-          "path": "scss/layout/far-styles.scss",
-          "output": "css/layout/far-styles.css",
-          "name": "far-styles.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "nodeSassCompress": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
+        "ca5c0d34": {
+          "id": "ca5c0d34",
+          "path": "homey-agency-personal(without-autorization).html",
+          "output": "homey-agency-personal(without-autorization).html",
+          "name": "homey-agency-personal(without-autorization).html",
+          "category": "JUST_WATCH",
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "40b7bc0f"
-          ],
-          "type": "sass"
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
@@ -2941,8 +2949,7 @@
           "mouseSync": true,
           "scrollSync": true,
           "keyboardSync": true,
-          "animateCss": true,
-          "enabled": false
+          "animateCss": true
         },
         "deployment": {
           "ftpHost": "",
@@ -3051,8 +3058,7 @@
             "autoCompile": false,
             "uglify": true,
             "mangle": true,
-            "sourceMaps": false,
-            "babel": false
+            "sourceMaps": false
           },
           "jade": {
             "autoCompile": true,
@@ -3064,8 +3070,7 @@
             "doubleQuotes": false
           },
           "kit": {
-            "autoCompile": true,
-            "minifyHtml": false
+            "autoCompile": true
           },
           "slim": {
             "autoCompile": true,
