added some styles

--- a/markup/prepros.cfg
+++ b/markup/prepros.cfg
@@ -2480,27 +2480,6 @@
           "height": 460,
           "width": 640
         },
-        "81ea0c53": {
-          "id": "81ea0c53",
-          "path": "scss/layout/far-styles.scss",
-          "output": "css/layout/far-styles.css",
-          "name": "far-styles.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "nodeSassCompress": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "40b7bc0f"
-          ],
-          "type": "sass"
-        },
         "2252e8de": {
           "id": "2252e8de",
           "path": "css/layout/far-styles.css",
@@ -2930,6 +2909,49 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "e43c620e": {
+          "id": "e43c620e",
+          "path": "homey-black-list-employer.html",
+          "output": "homey-black-list-employer.html",
+          "name": "homey-black-list-employer.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "3e99dff7": {
+          "id": "3e99dff7",
+          "path": "images/avatar2.png",
+          "output": "images/avatar2.png",
+          "name": "avatar2.png",
+          "category": "IMAGE",
+          "size": 34962,
+          "type": "png",
+          "initialSize": 34962,
+          "optimized": false,
+          "height": 140,
+          "width": 140
+        },
+        "81ea0c53": {
+          "id": "81ea0c53",
+          "path": "scss/layout/far-styles.scss",
+          "output": "css/layout/far-styles.css",
+          "name": "far-styles.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
