--- a/markup/prepros.cfg
+++ b/markup/prepros.cfg
@@ -57,7 +57,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "f6ac5c35": {
           "id": "f6ac5c35",
@@ -72,7 +73,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "94ce627f": {
           "id": "94ce627f",
@@ -87,7 +89,8 @@
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "javascript",
+          "babel": false
         },
         "62195e19": {
           "id": "62195e19",
@@ -2690,19 +2693,6 @@
           "height": 31,
           "width": 28
         },
-        "8b570fcb": {
-          "id": "8b570fcb",
-          "path": "images/no-photo.png",
-          "output": "images/no-photo.png",
-          "name": "no-photo.png",
-          "category": "IMAGE",
-          "size": 3001,
-          "type": "png",
-          "initialSize": 3001,
-          "optimized": false,
-          "height": 140,
-          "width": 140
-        },
         "02e4b4b1": {
           "id": "02e4b4b1",
           "path": "home-article.html",
@@ -2847,19 +2837,6 @@
           "parents": [],
           "type": "html"
         },
-        "6b0c27a8": {
-          "id": "6b0c27a8",
-          "path": "images/avatar.png",
-          "output": "images/avatar.png",
-          "name": "avatar.png",
-          "category": "IMAGE",
-          "size": 37334,
-          "type": "png",
-          "initialSize": 37334,
-          "optimized": false,
-          "height": 140,
-          "width": 140
-        },
         "923ac1bf": {
           "id": "923ac1bf",
           "path": "images/img-22.jpg",
@@ -2886,19 +2863,6 @@
           "height": 30,
           "width": 27
         },
-        "c9811854": {
-          "id": "c9811854",
-          "path": "images/sprite1.png",
-          "output": "images/sprite1.png",
-          "name": "sprite1.png",
-          "category": "IMAGE",
-          "size": 2435,
-          "type": "png",
-          "initialSize": 2435,
-          "optimized": false,
-          "height": 400,
-          "width": 200
-        },
         "ca5c0d34": {
           "id": "ca5c0d34",
           "path": "homey-agency-personal(without-autorization).html",
@@ -2921,26 +2885,13 @@
           "parents": [],
           "type": "html"
         },
-        "3e99dff7": {
-          "id": "3e99dff7",
-          "path": "images/avatar2.png",
-          "output": "images/avatar2.png",
-          "name": "avatar2.png",
-          "category": "IMAGE",
-          "size": 34962,
-          "type": "png",
-          "initialSize": 34962,
-          "optimized": false,
-          "height": 140,
-          "width": 140
-        },
         "81ea0c53": {
           "id": "81ea0c53",
           "path": "scss/layout/far-styles.scss",
           "output": "css/layout/far-styles.css",
           "name": "far-styles.scss",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -2949,9 +2900,174 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
+        },
+        "f7b9d3a7": {
+          "id": "f7b9d3a7",
+          "path": "homey-agency-personal(withautorization).html",
+          "output": "homey-agency-personal(withautorization).html",
+          "name": "homey-agency-personal(withautorization).html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "sass"
+          "type": "html"
+        },
+        "d1107eba": {
+          "id": "d1107eba",
+          "path": "homey-employee-rezume(with-autorization -open).html",
+          "output": "homey-employee-rezume(with-autorization -open).html",
+          "name": "homey-employee-rezume(with-autorization -open).html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "c9811854": {
+          "id": "c9811854",
+          "path": "images/sprite1.png",
+          "output": "images/sprite1.png",
+          "name": "sprite1.png",
+          "category": "IMAGE",
+          "size": 2884,
+          "type": "png",
+          "initialSize": 2884,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "fc9a01ca": {
+          "id": "fc9a01ca",
+          "path": "images/avatar3.jpg",
+          "output": "images/avatar3.jpg",
+          "name": "avatar3.jpg",
+          "category": "IMAGE",
+          "size": 6847,
+          "type": "jpg",
+          "initialSize": 6847,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "3b500577": {
+          "id": "3b500577",
+          "path": "images/avatar4.jpg",
+          "output": "images/avatar4.jpg",
+          "name": "avatar4.jpg",
+          "category": "IMAGE",
+          "size": 6164,
+          "type": "jpg",
+          "initialSize": 6164,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2633a0b6": {
+          "id": "2633a0b6",
+          "path": "images/avatar5.jpg",
+          "output": "images/avatar5.jpg",
+          "name": "avatar5.jpg",
+          "category": "IMAGE",
+          "size": 6893,
+          "type": "jpg",
+          "initialSize": 6893,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "50fc5034": {
+          "id": "50fc5034",
+          "path": "images/avatar6.jpg",
+          "output": "images/avatar6.jpg",
+          "name": "avatar6.jpg",
+          "category": "IMAGE",
+          "size": 4967,
+          "type": "jpg",
+          "initialSize": 4967,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9f912a53": {
+          "id": "9f912a53",
+          "path": "images/avatar.jpg",
+          "output": "images/avatar.jpg",
+          "name": "avatar.jpg",
+          "category": "IMAGE",
+          "size": 6817,
+          "type": "jpg",
+          "initialSize": 6817,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "88438c5a": {
+          "id": "88438c5a",
+          "path": "images/avatar2.jpg",
+          "output": "images/avatar2.jpg",
+          "name": "avatar2.jpg",
+          "category": "IMAGE",
+          "size": 5627,
+          "type": "jpg",
+          "initialSize": 5627,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "88b86c36": {
+          "id": "88b86c36",
+          "path": "images/no-photo.jpg",
+          "output": "images/no-photo.jpg",
+          "name": "no-photo.jpg",
+          "category": "IMAGE",
+          "size": 1912,
+          "type": "jpg",
+          "initialSize": 1912,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "288c59d1": {
+          "id": "288c59d1",
+          "path": "images/avatar7.jpg",
+          "output": "images/avatar7.jpg",
+          "name": "avatar7.jpg",
+          "category": "IMAGE",
+          "size": 5831,
+          "type": "jpg",
+          "initialSize": 5831,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "42872ad2": {
+          "id": "42872ad2",
+          "path": "homey-employee.html",
+          "output": "homey-employee.html",
+          "name": "homey-employee.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "a4fb02db": {
+          "id": "a4fb02db",
+          "path": "images/avatar8.jpg",
+          "output": "images/avatar8.jpg",
+          "name": "avatar8.jpg",
+          "category": "IMAGE",
+          "size": 8706,
+          "type": "jpg",
+          "initialSize": 8706,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
@@ -2971,7 +3087,8 @@
           "mouseSync": true,
           "scrollSync": true,
           "keyboardSync": true,
-          "animateCss": true
+          "animateCss": true,
+          "enabled": false
         },
         "deployment": {
           "ftpHost": "",
@@ -3080,7 +3197,8 @@
             "autoCompile": false,
             "uglify": true,
             "mangle": true,
-            "sourceMaps": false
+            "sourceMaps": false,
+            "babel": false
           },
           "jade": {
             "autoCompile": true,
@@ -3092,7 +3210,8 @@
             "doubleQuotes": false
           },
           "kit": {
-            "autoCompile": true
+            "autoCompile": true,
+            "minifyHtml": false
           },
           "slim": {
             "autoCompile": true,
