added some files

--- a/markup/prepros.cfg
+++ b/markup/prepros.cfg
@@ -173,7 +173,7 @@
           "compass": false,
           "fullCompass": false,
           "outputStyle": "expanded",
-          "customOutput": false,
+          "customOutput": true,
           "imported": false,
           "parents": [],
           "type": "sass"
@@ -2717,19 +2717,6 @@
           "height": 460,
           "width": 640
         },
-        "03344d66": {
-          "id": "03344d66",
-          "path": "images/sprite.png",
-          "output": "images/sprite.png",
-          "name": "sprite.png",
-          "category": "IMAGE",
-          "size": 5771,
-          "type": "png",
-          "initialSize": 5771,
-          "optimized": false,
-          "height": 200,
-          "width": 200
-        },
         "1d718d97": {
           "id": "1d718d97",
           "path": "images/img-18.jpg",
@@ -2884,27 +2871,6 @@
           "imported": false,
           "parents": [],
           "type": "html"
-        },
-        "81ea0c53": {
-          "id": "81ea0c53",
-          "path": "scss/layout/far-styles.scss",
-          "output": "css/layout/far-styles.css",
-          "name": "far-styles.scss",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "nodeSassCompress": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "40b7bc0f"
-          ],
-          "type": "sass"
         },
         "f7b9d3a7": {
           "id": "f7b9d3a7",
@@ -3068,6 +3034,153 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "d60cfbb0": {
+          "id": "d60cfbb0",
+          "path": "added-agency-popup.html",
+          "output": "added-agency-popup.html",
+          "name": "added-agency-popup.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "04f494c7": {
+          "id": "04f494c7",
+          "path": "homey-note-agency-mailing.html",
+          "output": "homey-note-agency-mailing.html",
+          "name": "homey-note-agency-mailing.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "1c3c20af": {
+          "id": "1c3c20af",
+          "path": "homey-employee-rezume(with-autorization).html",
+          "output": "homey-employee-rezume(with-autorization).html",
+          "name": "homey-employee-rezume(with-autorization).html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "e1580518": {
+          "id": "e1580518",
+          "path": "homey-employee-rezume(without-autorization).html",
+          "output": "homey-employee-rezume(without-autorization).html",
+          "name": "homey-employee-rezume(without-autorization).html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "03344d66": {
+          "id": "03344d66",
+          "path": "images/sprite.png",
+          "output": "images/sprite.png",
+          "name": "sprite.png",
+          "category": "IMAGE",
+          "size": 5823,
+          "type": "png",
+          "initialSize": 5823,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "81ea0c53": {
+          "id": "81ea0c53",
+          "path": "scss/layout/far-styles.scss",
+          "output": "css/layout/far-styles.css",
+          "name": "far-styles.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
+        },
+        "faab2931": {
+          "id": "faab2931",
+          "path": "scss/components/bootstrap-datepicker.scss",
+          "output": "css/components/bootstrap-datepicker.css",
+          "name": "bootstrap-datepicker.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
+        },
+        "3fd1dda8": {
+          "id": "3fd1dda8",
+          "path": "js/bootstrap-datepicker.min.js",
+          "output": "js/bootstrap-datepicker.min-dist.js",
+          "name": "bootstrap-datepicker.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "babel": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "ab7ad103": {
+          "id": "ab7ad103",
+          "path": "js/bootstrap-datepicker.js",
+          "output": "js/bootstrap-datepicker-dist.js",
+          "name": "bootstrap-datepicker.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "babel": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "61eb54bc": {
+          "id": "61eb54bc",
+          "path": "js/bootstrap-datepicker.ru.min.js",
+          "output": "js/bootstrap-datepicker.ru.min-dist.js",
+          "name": "bootstrap-datepicker.ru.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "babel": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
